@@ -64,6 +64,7 @@ define function, begin
 # 597,runningonlinux,0          # returns true if the device is Linux
 # 600,runningonouya,0           # returns true if the device is OUYA (see also "running on console")
 649,multdiv,3,0,0,0           # calculate int(float(a)*b/c), with rounding and clamping (undocumented)
+659,_asserteq,4,0,0,0,0       # Used in the macro expansion of assert(x==y)
 end
 
 define trigger,begin
